// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookLoginButton component should render a log in link 1`] = `
<Connect(FacebookLoginButtonContainer)
  link={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <FacebookLoginButtonContainer
    dispatch={[Function]}
    link={true}
    reconnect={false}
    redirectUri="https://.../"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <a
      href="https://.../"
    >
      Login with Facebook
    </a>
  </FacebookLoginButtonContainer>
</Connect(FacebookLoginButtonContainer)>
`;

exports[`FacebookLoginButton component should render a reconnect button 1`] = `
<Connect(FacebookLoginButtonContainer)
  reconnect={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <FacebookLoginButtonContainer
    dispatch={[Function]}
    link={false}
    reconnect={true}
    redirectUri="https://.../?reconnect"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <ForwardRef
      intent="primary"
      onClick={[Function]}
      type="submit"
    >
      <button
        className="wrapper fill primary medium"
        onClick={[Function]}
        type="submit"
      >
        Reconnect
      </button>
    </ForwardRef>
  </FacebookLoginButtonContainer>
</Connect(FacebookLoginButtonContainer)>
`;
